<resources>
    <string name="app_name">微秒金服</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="check_net">"请检查网络"</string>
    <string name="network_error">连接网络出错</string>
    <string name="loading">加载中</string>
    <string name="json_erro">数据错误</string>


    <string name="register">注册</string>
    <string name="login_in">登录</string>
    <string name="input_mobile">请输入注册的手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_old_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_bri">请选择生日</string>
    <string name="input_addr">请选择地区</string>

    <string name="code">请输入验证码</string>
    <string name="verify_code">请输入有效的6位验证码</string>
    <string name="verify_pass">密码最短不能少于6位</string>
    <string name="send_code">发送验证码</string>
    <string name="submit">提交</string>
    <string name="confirm_add">确认添加</string>
    <string name="confirm">确认</string>
    <string name="next">下一步</string>
    <string name="area">地区</string>

    <string name="me">我的</string>
    <string name="entering">信息录入</string>
    
    <string-array name="select_dialog_items">
        <item>从相册选择</item>
        <item>拍照</item>
    </string-array>
</resources>
