<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_bg"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <cn.fpower.financeservice.view.widget.ClearEditText
        android:id="@+id/view_old_pass"
        style="@style/edittext_linput"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:inputType="number"
        android:hint="@string/input_old_pwd" />

    <cn.fpower.financeservice.view.widget.ClearEditText
        android:id="@+id/view_new_pass"
        style="@style/edittext_linput"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:inputType="number"
        android:hint="@string/input_new_pwd" />

    <Button
        android:background="@drawable/s_round_group_red"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:text="@string/submit"
        android:id="@+id/submit" />
</LinearLayout>